--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>Home :: dotInceptions</title>
+  <title>Home | dotInceptions</title>
   <meta charset="utf-8">
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
   <link rel="shortcut icon" type="image/x-icon" href="/images/dots.png" />
@@ -18,7 +18,7 @@
             <li class="presentation"><h1 id="logo"><a href="/"><img src="/images/dotinceptions.png" /></a></h1></li>
             <li class="presentation"><a href="/services">Services</a></li>
             <li class="presentation"><a href="/about">About</a></li>
-            <li class="presentation"><a href="mailto:team+contact@dotinceptions.com"><i class="fa fa-envelope-o"></i>Contact</a></li>
+            <li class="presentation"><a href="mailto:adam.m.escamilla@gmail.com"><i class="fa fa-envelope-o"></i>Contact</a></li>
           </ul>
         </nav>
       </div>
@@ -72,10 +72,8 @@ footer {
 }
 </style>
 <footer>
-  <small>Copyright &copy; 2016 dotInceptions.com<br />
-    Made in Houston, Texas.</small>
+  <small>Copyright &copy; 2016 dotInceptions.com</small>
   </footer>
-
   </div>
 </body>
 </html>
