added phone number

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li class="presentation"><a href="/services">Services</a></li>
             <li class="presentation"><a href="/about">About</a></li>
             <li class="presentation"><a href="mailto:adam.m.escamilla@gmail.com"><i class="fa fa-envelope-o"></i>Contact</a></li>
+            <li class="presentation"><a href="mailto:adam.m.escamilla@gmail.com"><i class="fa fa-phone-square"></i>Phone</a></li>
           </ul>
         </nav>
       </div>
