updated services header and footer

--- a/services/index.html
+++ b/services/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>Services :: dotInceptions</title>
+  <title>Services | dotInceptions</title>
   <meta charset="utf-8">
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
   <link rel="shortcut icon" type="image/x-icon" href="/images/dots.png" />
@@ -17,8 +17,8 @@
           <ul class="nav">
             <li class="presentation"><h1 id="logo"><a href="/"><img src="/images/dotinceptions.png" /></a></h1></li>
             <li class="presentation"><a href="/services">Services</a></li>
-            <li class="presentation"><a href="/about">About</a></li>
-            <li class="presentation"><a href="mailto:team+contact@dotinceptions.com"><i class="fa fa-envelope-o"></i>Contact</a></li>
+            <li class="presentation"><a href="mailto:adam.m.escamilla@gmail.com"><i class="fa fa-envelope-o"></i>Contact</a></li>
+            <li class="presentation"><a href="tel:6233494228"><i class="fa fa-phone-square"></i> (623)349-4228</a></li>
           </ul>
         </nav>
       </div>
@@ -95,7 +95,7 @@
   <div class="row text-center">
     <div class="col-md-12">
         <h3>Do you think we can help you? </h3>
-        <a class="btn btn-lg btn-info bg-gray" href="mailto:team+hire@dotinceptions.com">Hire Us</a>
+        <a class="btn btn-lg btn-info bg-gray" href="mailto:adam.m.escamilla@gmail.com">Hire Us</a>
     </div>
   </div>
 </section>
@@ -112,8 +112,7 @@ footer {
 }
 </style>
 <footer>
-  <small>Copyright &copy; 2016 dotInceptions.com<br />
-    Made in Houston, Texas.</small>
+  <small>Copyright &copy; 2016 dotInceptions.com</small>
   </footer>
 
   </div>
