--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
   <title>Home | dotInceptions</title>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+  <meta name="description" content="We work with clients to build modern service architectures, operations automation, and software delivery pipelines.">
+  <meta name="theme-color" content="#00A6CE">
   <link rel="shortcut icon" type="image/x-icon" href="/images/dots.png" />
   <link rel="stylesheet" type="text/css"
   href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Condensed:400,700">
-  <link href="stylesheets/syntax.css" rel="stylesheet" /><link href="stylesheets/global.css" rel="stylesheet" /><link href="stylesheets/home.css" rel="stylesheet" />
+  <link href="stylesheets/syntax.css" rel="stylesheet" /><link href="stylesheets/global.css" rel="stylesheet" />
 </head>
 <body>
   <div id="wrapper">
