--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="shortcut icon" type="image/x-icon" href="/images/dots.png" />
   <link rel="stylesheet" type="text/css"
   href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Condensed:400,700">
-  <link href="stylesheets/syntax.css" rel="stylesheet" /><link href="global.css" rel="stylesheet" />
+  <link href="stylesheets/syntax.css" rel="stylesheet" /><link href="stylesheets/global.css" rel="stylesheet" />
 </head>
 <body>
   <div id="wrapper">
