using seperate styles for global and home

--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
   <link rel="shortcut icon" type="image/x-icon" href="/images/dots.png" />
   <link rel="stylesheet" type="text/css"
   href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Condensed:400,700">
-  <link href="stylesheets/syntax.css" rel="stylesheet" /><link href="stylesheets/global.css" rel="stylesheet" />
+  <link href="stylesheets/syntax.css" rel="stylesheet" /><link href="stylesheets/global.css" rel="stylesheet" /><link href="stylesheets/home.css" rel="stylesheet" />
 </head>
 <body>
   <div id="wrapper">
     <header>
+      <h1 id="logo"><a href="/"><img src="/images/dotinceptions.png" /></a></h1>
       <div class="container clearfix">
         <nav>
           <ul class="nav">
-            <li class="presentation"><h1 id="logo"><a href="/"><img src="/images/dotinceptions.png" /></a></h1></li>
+<!--            <li class="presentation"><h1 id="logo"><a href="/"><img src="/images/dotinceptions.png" /></a></h1></li> -->
             <li class="presentation"><a href="/services">Services</a></li>
             <li class="presentation"><a href="mailto:adam.m.escamilla@gmail.com"><i class="fa fa-envelope-o"></i>Contact</a></li>
             <li class="presentation"><a href="tel:6233494228"><i class="fa fa-phone-square"></i> (623)349-4228</a></li>
