--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div id="wrapper">
     <header>
-      <div class="container clearfix">
+      <div class="container">
         <nav class="nav-container">
           <div id="logo" class="nav-item"><a href="/"><img src="/images/dotinceptions.png" /></a></div>
           <ul class="nav-item">
