oved logo back into nav

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <header>
       <div class="container">
         <nav class="nav-container">
-          <div id="logo" class="nav-item"><a href="/"><img src="/images/dotinceptions.png" /></a></div>
+<!--          <div id="logo" class="nav-item"><a href="/"><img src="/images/dotinceptions.png" /></a></div> -->
           <ul class="nav-item">
-<!--            <li class="presentation"><h1 id="logo"><a href="/"><img src="/images/dotinceptions.png" /></a></h1></li> -->
+            <li class="presentation"><h1 id="logo"><a href="/"><img src="/images/dotinceptions.png" /></a></h1></li>
             <li class="presentation"><a href="/services">Services</a></li>
             <li class="presentation"><a href="mailto:adam.m.escamilla@gmail.com"><i class="fa fa-envelope-o"></i>Contact</a></li>
             <li class="presentation"><a href="tel:6233494228"><i class="fa fa-phone-square"></i> (623)349-4228</a></li>
