more fixes for spacing

--- a/index.html
+++ b/index.html
@@ -42,20 +42,20 @@
 <section class="bg-blue">
   <div class="container">
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-4 svc-clm">
         <h3>Deployment Pipelines</h3>
         <p>We specialize in continous integration workflows, whether developing
           waterfall or container-based applications we help you set up a fast deployment pipeline.</p>
       </div>
 
-      <div class="col-md-4">
+      <div class="col-md-4 svc-clm">
         <h3>Cloud and Bare Metal</h3>
         <p>Whether deploying to EC2 or on premise, we provide a modern
          platform for your web application, docker container, or microservice
          requirements.</p>
       </div>
 
-      <div class="col-md-4">
+      <div class="col-md-4 svc-clm">
         <h3>Custom Fit Architecture</h3>
         <p>Designing from scratch or migrating existing systems, we use and
           build tools and workflows that uniquely meet the needs of your team.</p>
