make services responsive

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </section>
 
 <section class="bg-blue">
-  <div class="container">
+  <div class="container svc-desc">
     <div class="row">
       <div class="col-md-4 svc-clm">
         <h3>Deployment Pipelines</h3>
