removed flexible nav items

--- a/index.html
+++ b/index.html
@@ -15,19 +15,14 @@
 <body>
   <div id="wrapper">
     <header>
-      <div class="container">
-        <nav class="nav-container">
-<!--          <div id="logo" class="nav-item"><a href="/"><img src="/images/dotinceptions.png" /></a></div> -->
-	    <div class="nav-item">
-	            <li class="presentation"><h1 id="logo"><a href="/"><img src="/images/dotinceptions.png" /></a></h1></li>
-	    </div>
-	    <div class="nav-item">
-          <ul>
-	            <li class="presentation"><a href="/services">Services</a></li>
-	            <li class="presentation"><a href="mailto:adam.m.escamilla@gmail.com"><i class="fa fa-envelope-o"></i>Contact</a></li>
-	            <li class="presentation"><a href="tel:6233494228"><i class="fa fa-phone-square"></i> (623)349-4228</a></li>
+      <div class="container clearfix">
+        <nav>
+          <ul class="nav">
+            <li class="presentation"><h1 id="logo"><a href="/"><img src="/images/dotinceptions.png" /></a></h1></li>
+            <li class="presentation"><a href="/services">Services</a></li>
+            <li class="presentation"><a href="mailto:adam.m.escamilla@gmail.com"><i class="fa fa-envelope-o"></i>Contact</a></li>
+            <li class="presentation"><a href="tel:6233494228"><i class="fa fa-phone-square"></i> (623)349-4228</a></li>
           </ul>
-	    </div>
         </nav>
       </div>
     </header>
