customized error message

--- a/404.html
+++ b/404.html
@@ -1,1 +1,37 @@
-<p>not found</p>
+<html>
+<style>
+
+body {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#root {
+  padding: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+  border: 3px solid black;
+  border-radius: 9px;
+}
+#root p {
+  text-align: center;
+  font-family: roboto;
+  font-weight: 300;
+  font-size: 22px;
+}
+</style>
+<body>
+  <div id="root">
+    <header>
+    <div id="logo"><a href="/"><img src="https://www.dotinceptions.com/images/dotinceptions.png" /></a></div>
+    <p>Page not found</p>
+    </header>
+  </div>
+</body>
+</html>
+
