using relative src path

--- a/404.html
+++ b/404.html
@@ -28,7 +28,7 @@ body {
 <body>
   <div id="root">
     <header>
-    <div id="logo"><a href="/"><img src="https://www.dotinceptions.com/images/dotinceptions.png" /></a></div>
+    <div id="logo"><a href="/"><img src="/images/dotinceptions.png" /></a></div>
     <p>Page not found</p>
     </header>
   </div>
