--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 200px;
-  border: 3px solid black;
+  border: 3px solid #666;
   border-radius: 9px;
 }
 #root p {
@@ -23,6 +23,7 @@ body {
   font-family: roboto;
   font-weight: 300;
   font-size: 22px;
+  color: #666;
 }
 </style>
 <body>
