updated service and phone description

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li class="presentation"><h1 id="logo"><a href="/"><img src="/images/dotinceptions.png" /></a></h1></li>
             <li class="presentation"><a href="/services">Services</a></li>
             <li class="presentation"><a href="mailto:adam.m.escamilla@gmail.com"><i class="fa fa-envelope-o"></i>Contact</a></li>
-            <li class="presentation"><a href="tel:6233494228"><i class="fa fa-phone-square"></i> (623)349-4228</a></li>
+            <li class="presentation"><a href="tel:6233494228"><i class="fa fa-phone-square"></i> (623) 349-4228</a></li>
           </ul>
         </nav>
       </div>
@@ -44,7 +44,7 @@
       <div class="col-md-4 svc-clm">
         <h3>Deployment Pipelines</h3>
         <p>We specialize in continous integration workflows, whether developing
-          waterfall or container-based applications we help you set up a fast deployment pipeline.</p>
+          waterfall or microservice applications we help you set up a fast deployment pipeline.</p>
       </div>
 
       <div class="col-md-4 svc-clm">
